--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -1,13 +1,4 @@
-<!--
-<ul >
-    <li ><a  href="index.html">Home</a></li>
-    <li ><a  href="about.html">About</a></li>
-    <li ><a  href="about.html">What We Offer</a></li>
-    <li ><a  href="contact.html">Contact</a></li>
-</ul>
--->
-<div style="height:40px;">
-<nav class="navbar navbar-expand-lg navbar-dark" style="maxHeight:100px;">
+<nav class="navbar navbar-expand-lg navbar-dark">
 
     <a class="navbar-brand" href="">Navbar</a>
 
@@ -19,15 +10,17 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
+                <a class="nav-link" href="">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
+                <a class="nav-link" href="">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#cta">Download</a>
+                <a class="nav-link" href="">What we offer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Contact</a>
             </li>
         </ul>
     </div>
 </nav>
-</div>
