--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -66,7 +66,7 @@
 
 
 
-<div class="protypes">
+<div class="card protypes">
 <h3>Shop With US<br>This is a pargjgjjhgjagraph.</h3>
 
       <div class="container">
@@ -95,131 +95,133 @@
       </div>
 </div>
 
-<h3>Most Loved Products<br>This is a pargjgjjhgjagraph.</h3>
-
-<div class="row">
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
-  </div>
-</div>
-<div class="row">
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
-  </div>
-</div>
-
-
-<h3 >Customers <span>Love</span></h3>
-
-<div class="container mt-5">
-  <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#testimonialCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#testimonialCarousel" data-slide-to="1"></li>
-      <li data-target="#testimonialCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="row">
-          <div class="col-lg-6 testimonial bg-light text-center rounded">
-            <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-              src="images/bg1.jpg" width="50" height="50">
-            <h5>Tony Sam</h5>
-          </div>
-          <div class="col-lg-6 testimonial bg-light text-center rounded">
-            <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-              src="images/bg1.jpg" width="50" height="50">
-            <h5>Tony Sam</h5>
-          </div>
-        </div>
-      </div>
-
-      <div class="item">
+<div class="card recommendedProducts">
+  <h3>Most Loved Products<br>This is a pargjgjjhgjagraph.</h3>
   <div class="row">
-    <div class="col-lg-3 testimonial bg-light text-center rounded">
-      <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-        src="images/bg1.jpg" width="50" height="50">
-      <h5>Tony Sam</h5>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Snow" style="width:100%">
     </div>
-    <div class="col-lg-3 testimonial bg-light text-center rounded">
-      <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-        src="images/bg1.jpg" width="50" height="50">
-      <h5>Tony Sam</h5>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Forest" style="width:100%">
     </div>
-    <div class="col-lg-3 testimonial bg-light text-center rounded">
-      <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-        src="images/bg1.jpg" width="50" height="50">
-      <h5>Tony Sam</h5>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
-    <div class="col-lg-3 testimonial bg-light text-center rounded">
-      <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-        src="images/bg1.jpg" width="50" height="50">
-      <h5>Tony Sam</h5>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Snow" style="width:100%">
+    </div>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Forest" style="width:100%">
+    </div>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
+    </div>
+    <div class="col-lg-3">
+      <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
   </div>
 </div>
 
-      <div class="item">
-        <div class="row">
-          <div class="col-lg-4 col-md-4 testimonial bg-light text-center rounded">
-            <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-              src="images/bg1.jpg" width="50" height="50">
-            <h5>Tony Sam</h5>
+<div class="card testimonialSection">
+  <h3>Customers <span>Love</span></h3>
+
+  <div class="container mt-5">
+    <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#testimonialCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#testimonialCarousel" data-slide-to="1"></li>
+        <li data-target="#testimonialCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <div class="row">
+            <div class="col-lg-6 testimonial bg-light text-center rounded">
+              <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+                src="images/bg1.jpg" width="50" height="50">
+              <h5>Tony Sam</h5>
+            </div>
+            <div class="col-lg-6 testimonial bg-light text-center rounded">
+              <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+                src="images/bg1.jpg" width="50" height="50">
+              <h5>Tony Sam</h5>
+            </div>
           </div>
-          <div class="col-lg-4 testimonial bg-light text-center rounded">
-            <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-              src="images/bg1.jpg" width="50" height="50">
-            <h5>Tony Sam</h5>
-          </div>
-          <div class="col-lg-4 testimonial bg-light text-center rounded">
-            <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
-              src="images/bg1.jpg" width="50" height="50">
-            <h5>Tony Sam</h5>
+        </div>
+
+        <div class="item">
+    <div class="row">
+      <div class="col-lg-3 testimonial bg-light text-center rounded">
+        <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+          src="images/bg1.jpg" width="50" height="50">
+        <h5>Tony Sam</h5>
+      </div>
+      <div class="col-lg-3 testimonial bg-light text-center rounded">
+        <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+          src="images/bg1.jpg" width="50" height="50">
+        <h5>Tony Sam</h5>
+      </div>
+      <div class="col-lg-3 testimonial bg-light text-center rounded">
+        <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+          src="images/bg1.jpg" width="50" height="50">
+        <h5>Tony Sam</h5>
+      </div>
+      <div class="col-lg-3 testimonial bg-light text-center rounded">
+        <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+          src="images/bg1.jpg" width="50" height="50">
+        <h5>Tony Sam</h5>
+      </div>
+    </div>
+  </div>
+
+        <div class="item">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 testimonial bg-light text-center rounded">
+              <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+                src="images/bg1.jpg" width="50" height="50">
+              <h5>Tony Sam</h5>
+            </div>
+            <div class="col-lg-4 testimonial bg-light text-center rounded">
+              <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+                src="images/bg1.jpg" width="50" height="50">
+              <h5>Tony Sam</h5>
+            </div>
+            <div class="col-lg-4 testimonial bg-light text-center rounded">
+              <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
+                src="images/bg1.jpg" width="50" height="50">
+              <h5>Tony Sam</h5>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#testimonialCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#testimonialCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#testimonialCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#testimonialCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+</div>
     <!-- <div class="row">
         <div class="col-md-4">
             <div class="testimonial p-3 bg-light text-center rounded"><img src="https://i.imgur.com/lU2pDQv.png" width="40">
