--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -22,7 +22,7 @@
 </div>
 
 
-        <div class="container">
+        <div class="card bannerSection">
 
         <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
@@ -45,10 +45,6 @@
 
             <div class="item">
               <img src="images/banner3.jpg" alt="New york">
-            </div>
-
-            <div class="item">
-              <img src="images/logo1.jpg" alt="New york">
             </div>
           </div>
 
@@ -97,31 +93,31 @@
 
 <div class="card recommendedProducts">
   <h3>Most Loved Products<br>This is a pargjgjjhgjagraph.</h3>
-  <div class="row">
-    <div class="col-lg-3">
+  <div class="row recommendedProductsRow">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Snow" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Forest" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-3">
+  <div class="row recommendedProductsRow">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Snow" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Forest" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6">
       <img src="images/bg1.jpg" alt="Mountains" style="width:100%">
     </div>
   </div>
@@ -130,7 +126,7 @@
 <div class="card testimonialSection">
   <h3>Customers <span>Love</span></h3>
 
-  <div class="container mt-5">
+  <div class="container">
     <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
