--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -6,6 +6,10 @@
   color: white;
 }
 
+body {
+  background-color: #f0a500;
+}
+
 /* Navigation Bar */
 
 .navbar {
@@ -35,6 +39,10 @@
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 /* Banner Carousel */
+.bannerSection {
+  margin: 1%;
+}
+
 .bannerItem {
   height: 50%;
   width: 100%;
@@ -42,10 +50,11 @@
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 .container {
-  //*image-orientation: inherit;*/
+  /*image-orientation: inherit;*/
   width: 100%;
   max-width: 100%;
   text-align: center;
+  padding: 0;
 }
 
 .column {
@@ -59,6 +68,7 @@
   background-color: #c87941;
   padding-bottom: 2%;
   margin: 1%;
+  text-align: center;
 }
 
 .products {
@@ -82,6 +92,11 @@
 
 .recommendedProducts {
   margin: 1%;
+}
+
+.recommendedProductsRow {
+  background-color: #f0a500;
+  padding: 1%;
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
@@ -111,37 +126,48 @@
     color: #9c27b0;
     text-transform: uppercase;
     font-size: 15px;
-    margin-top: 8px
+    margin-top: 2%;
 }
-.testimonial h4 {
-    color: brown;
-    text-transform: uppercase;
-    font-size: 15px;
-    margin-top: 8px
-}
-.testimonial p1 {
+
+.testimonial p {
     color: black;
     line-height: 19px;
     font-size: 13px;
-    margin-top: 16px
+    margin: 5% 25%;
 }
+
+.testimonial img {
+    margin: 2% auto;
+}
+
 .testo{
   padding-top: 5%;
   padding-bottom: 5%;
 }
+
 .testimonialSection {
   margin: 1%;
+}
+
+.testimonialSection h3 {
+  border-radius: 5px 5px 0 0;
+}
+
+.carousel-control{
+  border-radius: 0 0 5px 5px;
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 h3 {
-  margin-top: 0%;
+  margin-top: 0;
   background-color: #87431d;
   padding-top: 5%;
   padding-bottom: 5%;
   text-align: center;
   color: white;
+  margin-bottom: 0;
+  border-radius: 5px 5px 0 0;
 }
 
 footer {
