--- a/kelabros/components/Footer.html
+++ b/kelabros/components/Footer.html
@@ -1,3 +1,9 @@
 <footer>
-    <p>Footer</p>
+
+    <p id="icons">
+        <i class="fa fa-facebook-f fa-lg"></i>
+        <i class="fa fa-twitter fa-lg"></i>
+        <i class="fa fa-instagram fa-lg"></i>
+        <i class="fa fa-google-plus fa-lg"></i>
+    </p>
 </footer>
