--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg">
 
-    <a class="navbar-brand" href="">Navbar</a>
+    <div class="navbar-brand">
+        <img src="images/Logo_Trans.png"/>
+    </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
         <span class="navbar-toggler-icon"></span>
@@ -10,16 +12,16 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="">Home</a>
+                <a class="nav-link" href="">HOME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">About</a>
+                <a class="nav-link" href="">ABOUT</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">What we offer</a>
+                <a class="nav-link" href="">WHAT WE OFFER</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="">CONTACT</a>
             </li>
         </ul>
     </div>
