--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -244,13 +244,7 @@
 <div id="footer">
 </div>
 
-<script>
-$(function(){
-	$("#header").load("Header.html");
-	$("#footer").load("Footer.html");
-});
-</script>
-
+<script src="js/headerFooter.js"></script>
 
 </body>
 </html>
