--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -169,6 +169,71 @@ width:30%;
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+/* dryFruits */
+
+.p1 {
+  margin-top: 0;
+  background-color: #ffc93c;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  margin-bottom: 0;
+  border-radius: 5px 5px 0 0;
+}
+.p2{
+  padding-top: 10px;
+  padding-bottom: 5px;
+  text-align: center;
+  font-size: 20px;
+  font-style: bold;
+
+}
+/* /////////////////////////////// */
+
+/* contact  */
+
+.cont-details{
+/* background-color: #c87941; */
+text-align: left;
+font-size: 15px;
+
+}
+
+/* Split the screen in half */
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  /* top: 0; */
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+  background-color: #c87941;
+  padding: 8% 5% 5% 10%;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+  background-color: #c87941;
+    padding: 8% 5% 5% 5%;
+}
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+/* dryFruits image hover */
+
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
 h3 {
   margin-top: 0;
   background-color: #87431d;
