--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -54,7 +54,7 @@ Pune, 411038. <br>
 <div class="split right">
 <div class="mapouter">
   <div class="gmap_canvas">
-    <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+    <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     <a href="https://www.whatismyip-address.com/divi-discount/"></a>
   </div>
   <style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:450px;width:550px;}
