Dry Fruits page.

--- a/kelabros/components/Footer.html
+++ b/kelabros/components/Footer.html
@@ -1,9 +1,9 @@
 <footer>
-
-    <p id="icons">
-        <i class="fa fa-facebook-f fa-lg"></i>
-        <i class="fa fa-twitter fa-lg"></i>
-        <i class="fa fa-instagram fa-lg"></i>
-        <i class="fa fa-google-plus fa-lg"></i>
-    </p>
+    <span><b> Find us here! </b></span>
+    <div class="handles">
+        <a class="fa fa-facebook-f fa-lg" href="#"></a>
+       <a class="fa fa-twitter fa-lg" href="#"></a>
+        <a class="fa fa-instagram fa-lg" href="#"></a>
+     <a class="fa fa-google-plus fa-lg" href="#"></a>
+    </div>
 </footer>
