--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -1,26 +1,384 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="stylesheets/style.css" rel="stylesheet"  type="text/css" >
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js" crossorigin="anonymous"></script>
 
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="stylesheets/style.css" rel="stylesheet"  type="text/css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js" crossorigin="anonymous"></script>
 
     <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
 
 </head>
 <body>
+
+
 <div id="header">
 </div>
 
-<h3>Displays Dry Fruits.</h3>
+<div class="card protypes">
+    <h3>Dry Fruit 1</h3>
+
+    <div class="container">
+        <div class="products row">
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit1Content1">
+                <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                <h2>Dry Fruits One</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit1Content2">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Two</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit1Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Three</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit1Content4">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Four</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit1Content5">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Five</h2>
+                </div>
+            </div>
+           <!-- <div class="col-lg-2">
+                <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                <h2>Spices</h2>
+            </div>
+            <div class="col-lg-2">
+                <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                <h2>Organics</h2>
+            </div>
+            <div class="col-lg-2">
+                <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                <h2>Nutrition</h2>
+            </div>
+            <div class="col-lg-2">
+                <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                <h2>X</h2>
+            </div>-->
+        </div>
+        <div class="products row">
+            <div class="collapse multi-collapse" id="dryFruit1Content1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit1Content2">
+                <div class="card card-body">
+                    Content II
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit1Content3">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit1Content4">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit1Content5">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+</div>
 
 
+<div class="card protypes">
+    <h3>Walnuts</h3>
+
+    <div class="container">
+        <div class="products row">
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit2Content1">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits One</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit2Content2">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Two</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit2Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Three</h2>
+                </div>
+            </div>
+            </div>
+            <!-- <div class="col-lg-2">
+                 <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                 <h2>Spices</h2>
+             </div>
+             <div class="col-lg-2">
+                 <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                 <h2>Organics</h2>
+             </div>
+             <div class="col-lg-2">
+                 <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                 <h2>Nutrition</h2>
+             </div>
+             <div class="col-lg-2">
+                 <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                 <h2>X</h2>
+             </div>-->
+        </div>
+        <div class="products row">
+            <div class="collapse multi-collapse" id="dryFruit2Content1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit2Content2">
+                <div class="card card-body">
+                    Content II
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit2Content3">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card protypes">
+    <h3>Almonds</h3>
+
+    <div class="container">
+        <div class="products row">
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit3Content1">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits One</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit3Content2">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Two</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit3Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Three</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit3Content4">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Four</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit3Content5">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Five</h2>
+                </div>
+            </div>
+        </div>
+        <div class="products row">
+            <div class="collapse multi-collapse" id="dryFruit3Content1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit3Content2">
+                <div class="card card-body">
+                    Content II
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit3Content3">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit3Content4">
+                <div class="card card-body">
+                    Content IV
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit3Content5">
+                <div class="card card-body">
+                    Content V
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="card protypes">
+    <h3>Cashew</h3>
+
+    <div class="container">
+        <div class="products row">
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit4Content1">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits One</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit4Content2">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Two</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit4Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Three</h2>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="products row">
+            <div class="collapse multi-collapse" id="dryFruit4Content1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit4Content2">
+                <div class="card card-body">
+                    Content II
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit4Content3">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="card protypes">
+    <h3>Dry Kiwis</h3>
+
+    <div class="container">
+        <div class="products row">
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit5Content1">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits One</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit5Content2">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Two</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit5Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Three</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit5Content4">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Four</h2>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div  data-toggle="collapse" data-target="#dryFruit5Content3">
+                    <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
+                    <h2>Dry Fruits Five</h2>
+                </div>
+            </div>
+        </div>
+        <div class="products row">
+            <div class="collapse multi-collapse" id="dryFruit5Content1">
+                <div class="card card-body">
+                    Content here.
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit5Content2">
+                <div class="card card-body">
+                    Content II
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit5Content3">
+                <div class="card card-body">
+                    Content III
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit5Content4">
+                <div class="card card-body">
+                    Content IV
+                </div>
+            </div>
+            <div class="collapse multi-collapse" id="dryFruit5Content5">
+                <div class="card card-body">
+                    Content V
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+</div>
+
+
+<!--<p>
+    <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" >Toggle first element</a>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2">
+        Toggle second element</button>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample3">Toggle third element</button>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse">Toggle All elements</button>
+</p>
+<div class="row">
+    <div class="col">
+        <div class="collapse multi-collapse" id="multiCollapseExample1">
+            <div class="card card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="collapse multi-collapse" id="multiCollapseExample2">
+            <div class="card card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="collapse multi-collapse" id="multiCollapseExample3">
+            <div class="card card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            </div>
+        </div>
+    </div>
+</div>-->
 
 <div id="footer">
 </div>
