Linking contact page.

--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="">WHAT WE OFFER</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">CONTACT</a>
+                <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
         </ul>
     </div>
