--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -24,12 +24,12 @@
     <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
       <div class="cont-details">
         <h3 class=" "><b>Get in touch</b></h3>
-        <p class=" ">We're ready to lead you into the future with Business Services</p>
+        <p class="contact-text">We're ready to lead you into the future with Business Services</p>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header">Call Us</div>
+                <div class="card-header contact-card-header">Call Us</div>
                 <p class="card-text contact-card-text">Tel: 020-24476729 <br>
                   +91 94220 05670 </p>
               </div>
@@ -38,7 +38,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header">Email</div>
+                <div class="card-header contact-card-header">Email</div>
                 <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
                   kela.pratik53@gmail.com</p>
               </div>
@@ -50,7 +50,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header"> Store 1:</div>
+                <div class="card-header contact-card-header"> Store 1:</div>
                 <p class="card-text contact-card-text">
                   Shop no.3, Akash Apartment, Karve Road<br>
                   Next to Bakers Basket<br>
@@ -62,7 +62,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header"> Store 2:</div>
+                <div class="card-header contact-card-header"> Store 2:</div>
                 <p class="card-text contact-card-text" style="padding-bottom:13%">
                   Kapad Ganj, Raviwar Peth,<br>
                   Maharashtra <br>
@@ -79,7 +79,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header">Business Services</div>
+                <div class="card-header contact-card-header">Business Services</div>
                 <p class="card-title contact-card-title">
                   Monday to Friday</p>
                 <p class="card-text contact-card-text">
@@ -92,7 +92,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header">Business Services</div>
+                <div class="card-header contact-card-header">Business Services</div>
                 <p class="card-title contact-card-title">
                   Monday to Friday</p>
                 <p class="card-text contact-card-text">
@@ -106,27 +106,30 @@
       </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
-      <div class="mapouter">
-        <div class="gmap_canvas">
-          <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
-            marginwidth="0"></iframe>
-          <a href="https://www.whatismyip-address.com/divi-discount/"></a>
-        </div>
-        <style>
-          .mapouter {
-            position: relative;
-            text-align: right;
-            height: 500px;
-            width: 600px;
-          }
+      <div class="contact-map">
+        <h3>Visit Us</h3>
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
+              marginwidth="0"></iframe>
+            <a href="https://www.whatismyip-address.com/divi-discount/"></a>
+          </div>
+          <style>
+            .mapouter {
+              position: relative;
+              text-align: right;
+              height: 500px;
+              width: 600px;
+            }
 
-          .gmap_canvas {
-            overflow: hidden;
-            background: none !important;
-            height: 450px;
-            width: 550px;
-          }
-        </style>
+            .gmap_canvas {
+              overflow: hidden;
+              background: none !important;
+              height: 450px;
+              width: 550px;
+            }
+          </style>
+        </div>
       </div>
     </div>
   </div>
