Mobile contact page updated

--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -63,7 +63,7 @@
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
                 <div class="card-header contact-card-header"> Store 2:</div>
-                <p class="card-text contact-card-text" style="padding-bottom:13%">
+                <p class="card-text contact-card-text">
                   Kapad Ganj, Raviwar Peth,<br>
                   Maharashtra <br>
                   Pune, 411002.
