Adding icons to contact page.

--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> <!-- only for banner-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- only for circular images -->
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
@@ -29,7 +30,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header">Call Us</div>
+                <div class="card-header contact-card-header"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</div>
                 <p class="card-text contact-card-text">Tel: 020-24476729 <br>
                   +91 94220 05670 </p>
               </div>
@@ -38,7 +39,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header">Email</div>
+                <div class="card-header contact-card-header"><i class="fa fa-envelope" aria-hidden="true"></i> Email</div>
                 <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
                   kela.pratik53@gmail.com</p>
               </div>
@@ -50,7 +51,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"> Store 1:</div>
+                <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 1:</div>
                 <p class="card-text contact-card-text">
                   Shop no.3, Akash Apartment, Karve Road<br>
                   Next to Bakers Basket<br>
@@ -62,7 +63,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"> Store 2:</div>
+                <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 2:</div>
                 <p class="card-text contact-card-text">
                   Kapad Ganj, Raviwar Peth,<br>
                   Maharashtra <br>
@@ -79,7 +80,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header">Business Services</div>
+                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Business Services</div>
                 <p class="card-title contact-card-title">
                   Monday to Friday</p>
                 <p class="card-text contact-card-text">
@@ -92,7 +93,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
               <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header">Business Services</div>
+                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Customer Support</div>
                 <p class="card-title contact-card-title">
                   Monday to Friday</p>
                 <p class="card-text contact-card-text">
