--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -228,6 +228,10 @@ max-width:130px;
   font-weight: bold;
 }
 
+.contact-card-header i {
+  padding-right: 2%;
+}
+
 .contact-card-body {
   padding: 0;
 }
