--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -21,104 +21,104 @@
   <div id="header">
   </div>
 
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
-      <div class="cont-details">
-        <h3 class=" "><b>Get in touch</b></h3>
-        <p class="contact-text">We're ready to lead you into the future with Business Services</p>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</div>
-                <p class="card-text contact-card-text">Tel: 020-24476729 <br>
-                  +91 94220 05670 </p>
+    <div class="row contact-page-main">
+      <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
+        <div class="cont-details">
+          <h3 class=" "><b>Get in touch</b></h3>
+          <p class="contact-text">We're ready to lead you into the future with Business Services</p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</div>
+                  <p class="card-text contact-card-text">Tel: 020-24476729 <br>
+                    +91 94220 05670 </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-envelope" aria-hidden="true"></i> Email</div>
+                  <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
+                    kela.pratik53@gmail.com</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-envelope" aria-hidden="true"></i> Email</div>
-                <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
-                  kela.pratik53@gmail.com</p>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 1:</div>
-                <p class="card-text contact-card-text">
-                  Shop no.3, Akash Apartment, Karve Road<br>
-                  Next to Bakers Basket<br>
-                  Pune, 411038.
-                </p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 1:</div>
+                  <p class="card-text contact-card-text">
+                    Shop no.3, Akash Apartment, Karve Road<br>
+                    Next to Bakers Basket<br>
+                    Pune, 411038.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 2:</div>
+                  <p class="card-text contact-card-text">
+                    Kapad Ganj, Raviwar Peth,<br>
+                    Maharashtra <br>
+                    Pune, 411002.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 2:</div>
-                <p class="card-text contact-card-text">
-                  Kapad Ganj, Raviwar Peth,<br>
-                  Maharashtra <br>
-                  Pune, 411002.
-                </p>
+        </div>
+        <div class="cont-details">
+          <h3 class=" "><b>Working Hours</b></h3>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Business Services</div>
+                  <p class="card-title contact-card-title">
+                    Monday to Friday</p>
+                  <p class="card-text contact-card-text">
+                    9.00 am - 9.00 pm <br>
+                    2.00 pm - 4.00 pm - Closed
+                  </p>
+                </div>
               </div>
             </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+              <div class="card bg-light contact-card">
+                <div class="card-body bg-light contact-card-body">
+                  <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Customer Support</div>
+                  <p class="card-title contact-card-title">
+                    Monday to Friday</p>
+                  <p class="card-text contact-card-text">
+                    9.00 am - 9.00 pm <br>
+                    2.00 pm - 4.00 pm - Closed
+                  </p>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
       </div>
-      <div class="cont-details">
-        <h3 class=" "><b>Working Hours</b></h3>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Business Services</div>
-                <p class="card-title contact-card-title">
-                  Monday to Friday</p>
-                <p class="card-text contact-card-text">
-                  9.00 am - 9.00 pm <br>
-                  2.00 pm - 4.00 pm - Closed
-                </p>
-              </div>
+      <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
+        <div class="contact-map">
+          <h3>Visit Us</h3>
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
+                marginwidth="0"></iframe>
+              <a href="https://www.whatismyip-address.com/divi-discount/"></a>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-            <div class="card bg-light contact-card">
-              <div class="card-body bg-light contact-card-body">
-                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Customer Support</div>
-                <p class="card-title contact-card-title">
-                  Monday to Friday</p>
-                <p class="card-text contact-card-text">
-                  9.00 am - 9.00 pm <br>
-                  2.00 pm - 4.00 pm - Closed
-                </p>
-            </div>
-          </div>
-        </div>
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
-      <div class="contact-map">
-        <h3>Visit Us</h3>
-        <div class="mapouter">
-          <div class="gmap_canvas">
-            <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
-              marginwidth="0"></iframe>
-            <a href="https://www.whatismyip-address.com/divi-discount/"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div id="footer">
   </div>
