Corrected media query

--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -204,7 +204,7 @@ max-width:130px;
   margin: 0;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-device-width: 760px) {
   .contact-page-main{
     height: 75vh;
   }
