Dry fruit page CSS Updates.

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -54,7 +54,7 @@
     <h3>Shop With US<br>This space is for PRODUCTS.</h3>
 
     <div class="container">
-      <div class="products row">
+      <div class="products products-five row">
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="dryFruits.html">
             <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
@@ -82,7 +82,7 @@
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="dryFruits.html">
             <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
-            <h2>X</h2>
+            <h2>X_X</h2>
           </a>
         </div>
       </div>
