--- a/kelabros/components/about.html
+++ b/kelabros/components/about.html
@@ -2,54 +2,75 @@
 <html>
 
 <head>
-      <link href="style.css" rel="stylesheet"  type="text/css">
-     <!--  <script src="kela.js"></script>-->
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> <!-- only for banner-->
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- only for circular images -->
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js" crossorigin="anonymous"></script>
 
-      <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
+
+  <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
 
 </head>
 <body>
 
+  <div id="header">
+  </div>
 
-<div id="header">
-</div>
 
-<div class="Aboutexp">
-      <img src="left2.jpg" alt="anything">
-</div>
+
+
+
+
+
       <h3 >our Offering</h3>
 
+<div class="row Aboutexp" >
+  <div class="col-lg-6 col-md-6 col-sm-6 about-section">
+<img src="images/cart2.jpg">
+  </div>
+    <div class="col-lg-6 col-md-6 col-sm-6 about-section">
+      <p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.
+        Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia
+Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+    </div>
 
-      <div class="container mt-5">
-          <div class="row">
-              <div class="col-md-4">
-                  <div class="testimonial p-3  text-center rounded"><img src="sp.jpg" width="40">
+</div>
+      <div class="container mt-5 ml-3">
+          <div class="row about-row p-5">
+              <div class="card col-md-4 about-card">
+                  <div class="text-center rounded">
+                    <div class="card-header about-card-header">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
                       <h4>Call US anytime</h4>
-                      <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p1>
+                    </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
                   </div>
               </div>
 
-              <div class="col-md-4">
-                  <div class="testimonial p-3  text-center rounded"><img src="sp.jpg" width="40">
-                      <h4>Call US anytime</h4>
-                      <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p1>
+              <div class="card col-md-4 about-card">
+                  <div class="text-center rounded">
+<div class="card-header about-card-header">
+                    <i class="fas fa-truck"></i>
+                      <h4>HOME Delivery</h4>
+                    </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
                   </div>
               </div>
-              <div class="col-md-4">
-                  <div class="testimonial p-3  text-center rounded"><img src="sp.jpg" width="40">
-                      <h4>Call US anytime</h4>
-                      <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p1>
+              <div class="card col-md-4 about-card">
+                  <div class="text-center rounded">
+<div class="card-header about-card-header">
+                    <i class="fas fa-wallet"></i>
+                      <h4>Secure Payments</h4>
+                    </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
                   </div>
               </div>
