Fade in animation

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -57,31 +58,31 @@
       <div class="products products-five row">
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="dryFruits.html">
-            <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Dry Fruits</h2>
           </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="spices.html">
-            <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Spices</h2>
           </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="organics.html">
-            <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Organics</h2>
           </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="nutrition.html">
-            <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Nutrition</h2>
           </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="dryFruits.html">
-            <img src="images/bg1.jpg" class="rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>X_X</h2>
           </a>
         </div>
