--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -1,3 +1,10 @@
+/*animations*/
+@keyframes fade-in {
+  from {opacity:0}
+  to {opacity:1}
+}
+/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
 /* Navigation Bar */
 
 .navbar {
@@ -76,6 +83,10 @@ max-width:130px;
   max-width: 90%;
   margin: 0 auto;
   padding: 2% 0 0 3%;
+}
+
+.product-image:hover {
+  animation: fade-in 2s;
 }
 
 .products-five{
