--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -53,17 +53,17 @@
   <div class="card protypes">
     <h3>Shop With US<br>This space is for PRODUCTS.</h3>
 
-    <div class="container">
+    <div class="container pulse-animate">
       <div class="products products-five row">
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="dryFruits.html">
-            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/dryFruitsIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Dry Fruits</h2>
           </a>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-3">
           <a href="spices.html">
-            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/spicesIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Spices</h2>
           </a>
         </div>
@@ -91,32 +91,34 @@
 
   <div class="card recommendedProducts">
     <h3>Most Loved Products<br>This is a pargjgjjhgjagraph.</h3>
-    <div class="row recommendedProductsRow">
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Snow" style="width:100%">
+    <div class="pulse-animate">
+      <div class="row recommendedProductsRow">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Snow" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Forest" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
+        </div>
       </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Forest" style="width:100%">
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
-      </div>
-    </div>
-    <div class="row recommendedProductsRow">
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Snow" style="width:100%">
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Forest" style="width:100%">
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
+      <div class="row recommendedProductsRow">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Snow" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Forest" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img class="img-thumbnail" src="images/bg1.jpg" alt="Mountains" style="width:100%">
+        </div>
       </div>
     </div>
   </div>
