--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -7,6 +7,15 @@
 @keyframes rotate-component {
   from {transform: rotateY(180deg);}
 }
+
+@keyframes pulse {
+  0% {
+    background-color: #FFD57E;
+  }
+  100% {
+    background-color: #AC4B1C;
+  }
+}
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
 /* Navigation Bar */
@@ -89,6 +98,10 @@ max-width:130px;
   padding: 2% 0 0 3%;
 }
 
+.pulse-animate {
+  animation: pulse 5s infinite alternate;
+}
+
 .product-image:hover {
   animation: fade-in 2s;
 }
@@ -104,7 +117,7 @@ max-width: 70%
 .products h2 {
   font-size:1.75rem;
   font-weight: bold;
-  color: #542410;
+  color: white;
   margin-top: 10%;
   padding: 5% 0;
 }
