Improved responsiveness for index page

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -55,31 +55,31 @@
 
     <div class="container pulse-animate">
       <div class="products products-five row">
-        <div class="col-lg-2 col-md-2 col-sm-6">
+        <div class="col-6 col-lg-2 col-sm-6">
           <a href="dryFruits.html">
             <img src="images/dryFruitsIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Dry Fruits</h2>
           </a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-6">
+        <div class="col-6 col-lg-2 col-sm-6">
           <a href="spices.html">
             <img src="images/spicesIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Spices</h2>
           </a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-6">
+        <div class="col-6 col-lg-2 col-sm-6">
           <a href="organics.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Organics</h2>
           </a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-6">
+        <div class="col-6 col-lg-2 col-sm-6">
           <a href="nutrition.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>Nutrition</h2>
           </a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-6">
+        <div class="col-6 col-lg-2 col-sm-6">
           <a href="dryFruits.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
             <h2>X_X</h2>
