about page animation update

--- a/kelabros/components/about.html
+++ b/kelabros/components/about.html
@@ -29,7 +29,9 @@
 
 <div class="row Aboutexp" >
   <div class="col-lg-6 col-md-6 col-sm-6 about-section">
-<img src="images/cart2.jpg">
+    <div class="img-wrapper">
+      <img src="images/cart2.jpg">
+    </div>
   </div>
     <div class="col-lg-6 col-md-6 col-sm-6 about-section">
       <p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.
