--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -53,7 +53,7 @@
   <div class="card protypes">
     <h3>Shop With US<br>This space is for PRODUCTS.</h3>
 
-    <div class="container pulse-animate">
+    <div class="container products-background">
       <div class="products products-five row">
         <div class="col-6 col-lg-2 col-sm-4">
           <a href="dryFruits.html">
