--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -9,12 +9,13 @@
 }
 
 @keyframes pulse {
-  0% {
-    background-color: #FFD57E;
-  }
-  100% {
-    background-color: #AC4B1C;
-  }
+  0% {background-color: #FFD57E;}
+  100% {background-color: #AC4B1C;}
+}
+
+@keyframes zoom-out {
+  from {transform:scale(1);}
+  to {transform:scale(1.5);}
 }
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
@@ -98,6 +99,10 @@ max-width:130px;
   background-color: #c87941;
   margin: 1%;
   text-align: center;
+}
+
+.products-background {
+  background-image: linear-gradient(180deg, #FFD57E, #AC4B1C);
 }
 
 .products {
@@ -229,9 +234,22 @@ padding-bottom:2%;
 /* About */
 .Aboutexp {
   text-align: center;
+  overflow: hidden;
 }
+
+.img-wrapper {
+  display: inline-block;
+  overflow: hidden;
+  max-height:100%;
+  max-width:100%;
+}
+
 .Aboutexp img{
   max-width: 60%;
+}
+
+.Aboutexp img:hover {
+  animation: zoom-out 1s;
 }
 
 .about-section {
