All Products_Pages, font-size.

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="card recommendedProducts">
-    <h3>Most Loved Products<br>This is a pargjgjjhgjagraph.</h3>
+    <h3>Most Loved Products<br>Some data here.</h3>
     <div class="pulse-animate">
       <div class="row recommendedProductsRow">
         <div class="col-lg-3 col-md-3 col-sm-3">
@@ -124,7 +124,7 @@
   </div>
 
   <div class="card testimonialSection">
-    <h3>Customers <span>Love</span></h3>
+    <h3>Customers Love</h3>
 
     <div class="container">
       <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
